--- a/fern/docs/assets/styles.css
+++ b/fern/docs/assets/styles.css
@@ -45,3 +45,8 @@
 .fern-sidebar-link-text {
   text-transform: capitalize !important;
 }
+
+.fern-mdx-link {
+  font-weight: 500;
+  text-decoration: none;
+}
